[B]1.7.2[/B]
Fix settings after last.fm removal

[B]1.7.1[/B]
Disable last.fm options because last.fm is now truncating biogs

[B]1.7.0[/B]
Added: option to select language from TheAudioDB.com
Added back the option to scrape from last.fm

[B]1.6.4[/B]
Disable last.fm options because last.fm suspended XBMC's API account

[B]1.6.3[/B]
Updated language files from Transifex

[B]1.6.2[/B]
Updated language files from Transifex

[B]1.6.1[/B]
Language files update from Transifex

[B]1.6.0[/B]
Re-enable fanart.tv scraping by default

[B]1.5.0[/B]
Added: Scraping album thumbs from theaudiodb.com

[B]1.4.0[/B]
Added back fanart.tv scraping via JSON API. Still off by default.

[B]1.3.7[/B]
Temporarily disable fanarttv.com scraping due to site load issues

[B]1.3.6[/B]
Fixed: Scraper now works with both API layout

[B]1.3.5[/B]
Added: Chinese translation

[B]1.3.4[/B]
Fixed: MusicBrainz reverted back previous API layout changes so scraper needs to be reverted too

[B]1.3.3[/B]
Fixed: Broken search after API result layout changes

[B]1.3.2[/B]
Changed: Loosen up search results

[B]1.3.1[/B]
Tuned: Artist Splitter

[B]1.3.0[/B]
Added: scraping album review from TheAudioDb.com
Fixed: Artist Splitter

[B]1.2.2[/B]
Fixed: accommodate new Frodo style URL encoding

[B]1.2.1[/B]
Removed: '&' sign from artist splitter

[B]1.2.0[/B]
Added: scraping album review from amazon.de (if link exist on MusicBrainz)

[B]1.1.4[/B]
Fixed: typo blocks preferring album in search result

[B]1.1.3[/B]
Fixed: won't find tracks without recording id

[B]1.1.2[/B]
Fixed: won't find tracks without duration

[B]1.1.1[/B]
Fixed: artists won't find with 'and' in their name

[B]1.1.0[/B]
Added: trying to get album info when multiple artists are credited (first artist will be used)
Fixed: will not find some albums

[B]1.0.3[/B]
Fixed: Some Album releases were not found

[B]1.0.2[/B]
Fixed: Track Duration from MusicBrainz was wrong in certain cases. Credits to scudlee!

[B]1.0.1[/B]